--- a/public/kiosk.html
+++ b/public/kiosk.html
@@ -7,7 +7,16 @@
   <style>
     body { font-family: Arial, sans-serif; background: #f9f9f9; margin: 0; padding: 20px; }
     h1 { text-align: center; color: #333; }
-    .card { background: white; padding: 20px; margin: 0 auto; max-width: 600px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+    /* Make cards responsive on mobile: fill available width with a reasonable max. */
+    .card {
+      background: white;
+      padding: 20px;
+      margin: 0 auto 20px auto;
+      width: 100%;
+      max-width: 600px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
     .field { margin-bottom: 12px; }
     label { display: block; margin-bottom: 4px; color: #555; }
     input[type="text"], input[type="email"], input[type="date"], select {
@@ -18,6 +27,21 @@
     table { width: 100%; border-collapse: collapse; margin-top: 8px; }
     th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
     th { background: #fafafa; }
+    /* Table styles for availability grouping */
+    table.availability-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 8px;
+    }
+    table.availability-table th,
+    table.availability-table td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    table.availability-table th {
+      background: #fafafa;
+    }
     .status { margin-top: 15px; min-height: 20px; color: #333; }
     .timepicker-dropdown select { margin-right: 4px; padding: 4px; }
     .yes { color: #2e7d32; font-weight: bold; }
@@ -297,15 +321,20 @@
     function generateTimeSlots() {
       const slots = [];
       const pad = n => String(n).padStart(2, '0');
-      for (let hour = 8; hour < 18; hour++) {
+      // Generate 30‑minute slots covering the full 24‑hour day.  We use
+      // modulo arithmetic to roll over at midnight.
+      for (let hour = 0; hour < 24; hour++) {
         const h1 = pad(hour);
-        const h2 = pad(hour + 1);
+        const h2 = pad((hour + 1) % 24);
         slots.push({ start: `${h1}:00`, end: `${h1}:30` });
         slots.push({ start: `${h1}:30`, end: `${h2}:00` });
       }
       return slots;
     }
-    // Check availability
+    // Check availability for a selected space on a given date.  Generate
+    // 30‑minute slots for the entire day, fetch availability for each slot
+    // and then group contiguous slots into longer segments (available or
+    // unavailable).  The results are displayed in a concise table.
     async function checkAvailability() {
       const date = document.getElementById('avDate').value;
       const spaceId = document.getElementById('avSpace').value;
@@ -315,7 +344,7 @@
         resultsDiv.textContent = 'Please select a date and space.';
         return;
       }
-      // Fetch spaces to determine selected space type
+      // Determine the type of the selected space
       let spacesList = [];
       try {
         const resSpaces = await fetch('/api/spaces');
@@ -329,6 +358,7 @@
         return;
       }
       const slots = generateTimeSlots();
+      // Fetch availability for each slot in parallel
       const promises = slots.map(async ({ start, end }) => {
         const params = new URLSearchParams({ date, start, end });
         params.append('type', selected.type);
@@ -338,15 +368,33 @@
         return { start, end, available: isAvail };
       });
       const results = await Promise.all(promises);
+      // Group contiguous slots into segments
+      const segments = [];
+      let current = null;
+      results.forEach(r => {
+        if (!current) {
+          current = { start: r.start, end: r.end, available: r.available };
+        } else if (r.available === current.available) {
+          current.end = r.end;
+        } else {
+          segments.push(current);
+          current = { start: r.start, end: r.end, available: r.available };
+        }
+      });
+      if (current) segments.push(current);
+      // Build aggregated table
       const table = document.createElement('table');
+      table.className = 'availability-table';
       const thead = document.createElement('thead');
-      thead.innerHTML = '<tr><th>Time</th><th>Available</th></tr>';
+      thead.innerHTML = '<tr><th>Time Range</th><th>Status</th></tr>';
       table.appendChild(thead);
       const tbody = document.createElement('tbody');
-      results.forEach(r => {
+      segments.forEach(seg => {
         const tr = document.createElement('tr');
-        const timeLabel = `${to12Hour(r.start)} - ${to12Hour(r.end)}`;
-        tr.innerHTML = `<td>${timeLabel}</td><td class="${r.available ? 'yes' : 'no'}">${r.available ? 'Yes' : 'No'}</td>`;
+        const rangeLabel = `${to12Hour(seg.start)} - ${to12Hour(seg.end)}`;
+        const statusLabel = seg.available ? 'Available' : 'Unavailable';
+        const statusClass = seg.available ? 'yes' : 'no';
+        tr.innerHTML = `<td>${rangeLabel}</td><td class="${statusClass}">${statusLabel}</td>`;
         tbody.appendChild(tr);
       });
       table.appendChild(tbody);
