--- a/public/create-admin.html
+++ b/public/create-admin.html
@@ -34,7 +34,7 @@
     <label>Role</label>
     <select id="role">
       <option value="admin" selected>admin</option>
-      <option value="superadmin">superadmin</option>
+      <option value="superadmin">Super Admin</option>
     </select>
 
     <button class="primary" id="go">Create / Update Admin</button>
